@startuml

title __HOTELMANAGMENTMODEL's Class Diagram__\n

  namespace HotelManagmentModel {
    class HotelManagmentModel.Guest {
        - emailAddress : String
        - guestName : String
        - phoneNumber : String
        - reservations : List<Reservation>
        + Guest()
        + Guest()
        + addReservation()
        + deleteReservation()
        + getEmailAddress()
        + getGuestName()
        + getPhoneNumber()
        + getReservations()
        + setEmailAddress()
        + setGuestName()
        + setPhoneNumber()
    }
  }
  

  namespace HotelManagmentModel {
    class HotelManagmentModel.Hotel {
        + capacity : int
        {static} + deluxeAmount : int
        {static} + familyAmount : int
        {static} + managersList : List<Manager>
        {static} + numOfReservations : int
        {static} + premiumAmount : int
        {static} + receptionistsList : List<Receptionist>
        {static} + suiteAmount : int
        {static} + twinAmount : int
        + Hotel()
        {static} + getNumOfReservations()
        + getRoomsAmount()
    }
  }
  

  namespace HotelManagmentModel {
    class HotelManagmentModel.Manager {
        + Manager()
        - approveSpecialAct()
    }
  }
  

  namespace HotelManagmentModel {
    class HotelManagmentModel.Receptionist {
        # password : String
        # receptionistName : String
        # requests : List<String>
        # userName : String
        + Receptionist()
        + Receptionist()
        + getReceptionistName()
    }
  }
  

  namespace HotelManagmentModel {
    class HotelManagmentModel.Reservation {
        - checkInDate : LocalDate
        - checkOutDate : LocalDate
        - creditCardNumber : int
        - guestAmount : int
        - price : int
        - receptionistName : String
        - reservationNumber : int
        - roomsNumber : int
        + Reservation()
        + Reservation()
        + getCheckInDate()
        + getCheckOutDate()
        + getCreditCardNumber()
        + getGuest()
        + getGuestAmount()
        + getPrice()
        + getReceptionistName()
        + getReservationNumber()
        + getRoomsNumber()
    }
  }
  

  namespace HotelManagmentModel {
    class HotelManagmentModel.Room {
        - capacity : int
        - number : int
    }
  }
  

  namespace HotelManagmentModel {
    enum RoomType {
      Deluxe
      Family
      Premium
      Suite
      Twin
    }
  }
  

  HotelManagmentModel.Manager -up-|> HotelManagmentModel.Receptionist
  HotelManagmentModel.Reservation o-- HotelManagmentModel.Guest : guest
  HotelManagmentModel.Room o-- HotelManagmentModel.Room.RoomType : roomType
  HotelManagmentModel.Room +-down- HotelManagmentModel.Room.RoomType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
